<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="359dp"
        android:layout_height="431dp"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:padding="20sp"
            android:text="@string/Texto1"
            android:textColor="@color/purple_700"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/Texto2"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtnumero1"
                android:layout_width="19dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <EditText
            android:id="@+id/txtnumerocomprobar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:hint="@string/texto5"
            android:inputType="number" />

        <Button
            android:id="@+id/bnComprobar"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/teal_700"
            android:onClick="onClick"
            android:text="@string/Boton1"
            android:textColor="@color/white" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>