<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color2"
    tools:context=".Comprobacion">

    <LinearLayout
        android:layout_width="306dp"
        android:layout_height="425dp"
        android:background="#4F7485"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:backgroundTint="@color/purple_700"
            android:padding="20dp"
            android:text="@string/texto3"
            android:textColor="@color/color3"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/txtresultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:backgroundTint="@color/black"
            android:padding="20dp"
            android:text="@string/texto4"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="50dp"
            android:backgroundTint="@color/color1"
            android:onClick="IntertarNuevo"
            android:text="@string/Boton2"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>